2010-02-11  Corrado Primier  <bardo@aur.archlinux.org>

	* Release bump: 4

	* PKGBUILD: removed consolekit, policykit, hal and liboil dependencies;
	removed wrong glib optdepend; added doxygen makedepend; added udev (in
	place of hal) and rtkit (in place of libcap) dependencies; disabled hal;
	disabled rpaths

	* pulseaudio.install: updated the post_install message

2009-12-14  Corrado Primier  <bardo@aur.archlinux.org>

	* Version bump: 0.9.21

	* PKGBUILD: removed --as-needed LDFLAGS to prevent linking errors; added
	-fno-strict-aliasing to CFLAGS; removed gdbm dependency in favor of tdb;
	force use of tdb database

2009-09-19  Corrado Primier  <bardo@aur.archlinux.org>

	* Version bump: 0.9.18

2009-04-14  Corrado Primier  <bardo@aur.archlinux.org>

	* Version bump: 0.9.15

	* PKGBUILD: added system.pa to backup array, added some new optional
	dependencies (gconf, libxtst), changed bluez-libs makedepend/optdepend
	in bluez

2009-01-15  Corrado Primier  <bardo@aur.archlinux.org>

	* Version bump: 0.9.14

	* PKGBUILD: added optdepends array; added gdbm, consolekit, policykit
	and speex to dependencies; added intltool and speex to makedepends;
	added --localstatedir switch to configure

	* pulseaudio.rc: various improvements

	* pulseaudio.install: removed execution bit; removed optional
	dependencies list; moved to getent syntax; substituted wrong
	'realtime' with pulse-rt; great cleanup

2008-12-01  Corrado Primier  <bardo@aur.archlinux.org>

	* Release bump: 3

	* PKGBUILD: fixed /etc/rc.d/pulseaudio permissions

	* ChangeLog: corrected last update's date

2008-12-01  Corrado Primier  <bardo@aur.archlinux.org>

	* Release bump: 2

	* PKGBUILD: changed libexecdir to /usr/lib (FS#10292); fixed volume
	restoring for users of the system-wide daemon (FS#10356)

2008-04-04  Corrado Primier  <bardo@aur.archlinux.org>

	* Version bump: 0.9.10

	* PKGBUILD: added some "|| return 1", minor cleanups

	* pulseaudio.install: cleaned ups; moved post_upgrade() contents to