@@ -1,29 +1,26 @@
 # $Id$
+# Maintainer: Jan "heftig" Steffens <jan.steffens@gmail.com>
+# Contributor: Daniel J Griffiths <ghost1227@archlinux.us>
 # Contributor: Corrado Primier <bardo@aur.archlinux.org>
 # Contributor: William Rea <sillywilly@gmail.com>
-# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=pulseaudio
 pkgver=0.9.21
-pkgrel=5
+pkgrel=6
 pkgdesc="A networked sound server"
 arch=('i686' 'x86_64')
 url="http://pulseaudio.org/"
 license=('GPL' 'LGPL')
-depends=('libasyncns' 'libsamplerate' 'libtool' 'rtkit' 'speex' 'tdb' 'udev')
+depends=('libasyncns' 'libsamplerate' 'libtool' 'rtkit' 'speex' 'tdb' 'udev' 'tcp_wrappers')
 makedepends=('autoconf' 'avahi' 'bluez' 'doxygen' 'gconf' 'intltool' 'jack'
              'libatomic_ops' 'lirc-utils' 'pkgconfig' 'tcp_wrappers' 'libxtst'
              'libsm')
 optdepends=('alsa-plugins: ALSA support'
             'avahi: network support'
             'bluez: bluetooth support'
-            'gconf: configure pulseaudio through the gnome configuration db'
-            'jack-audio-connection-kit: jack support'
-            'lirc-utils: infra-red support'
-            'tcp_wrappers: network support')
-provides=('polypaudio')
-conflicts=('polypaudio')
-replaces=('polypaudio')
+            'gconf: configure pulseaudio through gconf'
+            'jack: jack support'
+            'lirc-utils: infra-red support')
 options=('emptydirs' '!libtool' '!makeflags')
 backup=('etc/pulse/client.conf' 'etc/pulse/daemon.conf' 'etc/pulse/default.pa' 'etc/pulse/system.pa')
 install=pulseaudio.install
