@@ -1,44 +1,43 @@
 post_install() {
-  post_upgrade
-
-  cat << MES
->>> The system-wide daemon is officially deprecated, however it is still
-    supported.
->>> To use the ESounD wrapper while using a system-wide daemon, you also need
-    to enable auth-anonymous for the esound-unix module, or to copy
-    /var/run/pulse/.esd_auth into each home directory.
->>> To use the system-wide daemon, add your user to the pulse-access group and
-    run /etc/rc.d/pulseaudio start or add pulseaudio to your DAEMONS array in
-    your /etc/rc.conf. The daemon configuration is in /etc/pulse/system.pa.
->>> Additionally, to use the pulse-rt group to its full potential, please add
-        @pulse-rt - rtprio 9
-        @pulse-rt - nice -11
-    to your /etc/security/limits.conf.
+  if post_upgrade; then 
+    cat << MES
+>>> See the wiki at http://wiki.archlinux.org/index.php/PulseAudio for details
+    on configuring your system for PulseAudio. This is mandatory.  You will
+    need to do the backend configuration for ALSA, at least.
 MES
+  else
+    echo "PulseAudio post-install failed"
+    return 1
+  fi
 }
 
 post_upgrade() {
   # Delete old group
-  getent group realtime &>/dev/null && /usr/sbin/groupdel realtime &>/dev/null
+  if getent group realtime &>/dev/null; then
+    usr/sbin/groupdel realtime || return 1
+  fi
 
   # Add groups
-  getent group pulse &>/dev/null || /usr/sbin/groupadd -g 130 pulse &>/dev/null
-  getent group pulse-access &>/dev/null || /usr/sbin/groupadd -g 131 pulse-access &>/dev/null
-  getent group pulse-rt &>/dev/null || /usr/sbin/groupadd -g 132 pulse-rt &>/dev/null
+  getent group pulse &>/dev/null || usr/sbin/groupadd -g 130 pulse || return 1
+  getent group pulse-access &>/dev/null || usr/sbin/groupadd -g 131 pulse-access || return 1
+  getent group pulse-rt &>/dev/null || usr/sbin/groupadd -g 132 pulse-rt || return 1
 
   # Add user
-  getent passwd pulse &>/dev/null || {
-    /usr/sbin/useradd -u 130 -d /var/run/pulse -g pulse -G audio -s /bin/false pulse
-    passwd -l pulse &>/dev/null
-  }
+  if ! getent passwd pulse &>/dev/null; then
+    usr/sbin/useradd -u 130 -d /var/run/pulse -g pulse -G audio -s /bin/false pulse || return 1
+    passwd -l pulse &>/dev/null || return 1
+  fi
+
   chown pulse:pulse /var/pulse
 }
 
 post_remove() {
-  getent group pulse &>/dev/null && /usr/sbin/groupdel pulse &>/dev/null
-  getent group pulse-access &>/dev/null && /usr/sbin/groupdel pulse-access &>/dev/null
-  getent group pulse-rt &>/dev/null && /usr/sbin/groupdel pulse-rt &>/dev/null
-  getent passwd pulse &>/dev/null && /usr/sbin/userdel -f pulse &>/dev/null
+  getent passwd pulse &>/dev/null && usr/sbin/userdel -f pulse
+  getent group pulse-access &>/dev/null && usr/sbin/groupdel pulse-access
+  getent group pulse-rt &>/dev/null && usr/sbin/groupdel pulse-rt
+  getent group pulse &>/dev/null && usr/sbin/groupdel pulse
+
+  true
 }
 
 # vim:set ts=2 sw=2 et:
