@@ -1,3 +1,13 @@
+2010-05-17  Jan Steffens  <jan.steffens@gmail.com>
+
+	* Release bump: 6
+
+	* PKGBUILD: Make tcp_wrappers a depend, it's needed; Fix jack optdepend;
+	reword gconf optdepend; remove old polypaudio references
+
+	* pulseaudio.install: update the post_install message; make install 
+	fail if any of the groupadds fail; removed most &>/dev/null; cleanup
+
 2010-02-11  Corrado Primier  <bardo@aur.archlinux.org>
 
 	* Release bump: 4
